Added all code except for handlers
