# swagger.yml
@@ -56,8 +56,8 @@ definitions:
         type: integer
         format: int64
       amount: 
-        type: integer
-        format: float64
+        type: number
+        format: double
       term:
         type: integer
         format: int
@@ -65,10 +65,6 @@ definitions:
         type: string
       state:
         type: string
-      userId:
-        type: integer
-        x-go-custom-tag: json:"user_id"
-        format: int64
       createdOn:
         type: string
         format: date-time
@@ -81,9 +77,12 @@ definitions:
         type: string
         format: date-time
         x-go-custom-tag: json:"start_date"
+      userId:
+        type: integer
+        format: int64
+        x-go-custom-tag: json:"user_id"
 
 
-  
   Installment:
     type: object
     required:
@@ -95,20 +94,16 @@ definitions:
         type: integer
         format: int64
       installmentAmount:
-        type: integer
-        format: float64
+        type: number
+        format: double
       repaymentAmount:
-        type: integer
-        format: float64
+        type: number
+        format: double
       dueDate:
         type: string
         format: date-time
       state:
         type: string
-      loanId:
-        type: integer
-        format: int64
-        x-go-custom-tag: json:"loan_id"
       createdOn:
         type: string
         format: date-time
@@ -117,6 +112,14 @@ definitions:
         type: string
         format: date-time
         x-go-custom-tag: json:"modified_on"
+      loanId:
+        type: integer
+        format: int64
+      repaymentTime:
+        type: string
+        format: date-time
+        x-go-custom-tag: json:repayment_time"
+
 
   User:
     type: object
